Fix footer alignment

--- a/packages/cd-components/src/atoms/footer/footer.module.scss
+++ b/packages/cd-components/src/atoms/footer/footer.module.scss
@@ -3,8 +3,8 @@
 
 .container {
   display: grid;
-  grid-template-columns: 5.5rem 5.5rem;
-  width: 11rem;
+  grid-template-columns: 7.5rem 7rem;
+  width: 100%;
   padding: 0.5rem;
 
   .link {
